[project]
name = "my-agentic-rag"
version = "0.1.0"
description = "Documents reader with LLM integration"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "faiss-cpu",
    "streamlit",
    "pypdf",
    "python-docx",
    "pandas",
    "tqdm",
]